--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.h2.console.enabled=true
+//spring.h2.console.enabled=true
 
-spring.h2.console.path=/h2-console
+//spring.h2.console.path=/h2-console
 
-spring.datasource.url=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
-
+spring.datasource.url=jdbc:postgresql://postgres:rphbPxkEIt5UtVlOJYen@containers-us-west-53.railway.app:5935/railway
+spring.datasource.username=postgres
+spring.datasource.password=rphbPxkEIt5UtVlOJYen
 spring.data.rest.base-path=/rest
 
 spring.jackson.serialization.INDENT_OUTPUT=true
