--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.datasource.url=jdbc:postgresql://postgres:rphbPxkEIt5UtVlOJYen@containers-us-west-53.railway.app:5935/railway
 spring.datasource.username=postgres
 spring.datasource.password=rphbPxkEIt5UtVlOJYen
-spring.data.rest.base-path=/rest
+//spring.data.rest.base-path=/rest
 
-spring.jackson.serialization.INDENT_OUTPUT=true
+//spring.jackson.serialization.INDENT_OUTPUT=true
 
